v.0.0.5 - uRequire v0.3.0alpha15 - grunt-urequire task v0.3 starts to work (still builds on shell:xxx)

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "urequire": "0.3.x",
   "grunt": "0.3.x",
   "grunt-shell": "*",
-  "grunt-contrib": "*"
+  "grunt-contrib": "*",
+  "grunt-urequire": "*"
  }
 }
