v.0.0.8 build with uRequire v0.3.0beta1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uberscore",
- "description": "uBerscore js is (now) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality 7 shortcuts that underscore doesn't, wouldn't, shouldn't have. Its highly build on _.",
+ "description": "uBerscore js is (now) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
  "version": "0.0.8",
  "homepage": "https://github.com/anodynos/uBerscore",
  "author": {
@@ -38,10 +38,10 @@
  },
  "devDependencies": {
   "chai": "*",
-  "urequire": "0.3.x",
+  "urequire": "0.3.0beta1",
   "grunt": "0.3.x",
   "grunt-shell": "*",
   "grunt-contrib": "*",
-  "grunt-urequire": "0.3.x"
+  "grunt-urequire": "0.4.2"
  }
 }
