--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
  "name": "uberscore",
  "description": "uBerscore js is (now) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
- "version": "0.0.8",
+ "version": "0.0.9alpha",
  "homepage": "https://github.com/anodynos/uBerscore",
  "author": {
   "name": "Agelos Pikoulas",
@@ -31,7 +31,7 @@
   "dist": "./build/dist"
  },
  "engines": {
-  "node": "*"
+  "node": "0.8.x"
  },
  "dependencies": {
   "lodash": "*"
