--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
- "name": "uberscore",
- "description": "uBerscore js is (now) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
- "version": "0.0.9alpha",
- "homepage": "https://github.com/anodynos/uBerscore",
- "author": {
-  "name": "Agelos Pikoulas",
-  "email": "agelos.pikoulas@gmail.com"
- },
- "licenses": [
-  {
-   "type": "MIT",
-   "url": "http://www.opensource.org/licenses/mit-license.php"
+  "name": "uberscore",
+  "description": "uBerscore js is (now) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
+  "version": "0.0.9alpha2",
+  "homepage": "https://github.com/anodynos/uBerscore",
+  "author": {
+    "name": "Agelos Pikoulas",
+    "email": "agelos.pikoulas@gmail.com"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
+    }
+  ],
+  "keywords": [
+    "data",
+    "manipulation"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/anodynos/uBerscore"
+  },
+  "bugs": {
+    "url": ""
+  },
+  "main": "./build/dist/uberscore-dev.js",
+  "test": "mocha build/spec --recursive --bail --reporter spec",
+  "directories": {
+    "doc": "./doc",
+    "dist": "./build/dist"
+  },
+  "engines": {
+    "node": "0.8.x"
+  },
+  "dependencies": {
+    "lodash": "*"
+  },
+  "devDependencies": {
+    "chai": "*",
+    "urequire": "0.3.0beta1",
+    "grunt": "0.3.x",
+    "grunt-shell": "*",
+    "grunt-contrib": "*",
+    "grunt-urequire": "0.4.2",
+    "grunt-este-watch": "0.0.3"
   }
- ],
- "keywords": [
-  "data",
-  "manipulation"
- ],
- "repository": {
-  "type": "git",
-  "url": "git://github.com/anodynos/uBerscore"
- },
- "bugs": {
-  "url": ""
- },
- "main": "./build/dist/uberscore-dev.js",
- "test": "mocha build/spec --recursive --bail --reporter spec",
- "directories": {
-  "doc": "./doc",
-  "dist": "./build/dist"
- },
- "engines": {
-  "node": "0.8.x"
- },
- "dependencies": {
-  "lodash": "*"
- },
- "devDependencies": {
-  "chai": "*",
-  "urequire": "0.3.0beta1",
-  "grunt": "0.3.x",
-  "grunt-shell": "*",
-  "grunt-contrib": "*",
-  "grunt-urequire": "0.4.2"
- }
 }
