--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   },
   "devDependencies": {
     "chai": "*",
-    "urequire": "0.3.0beta1",
+    "urequire": "0.4.0",
     "grunt-urequire": "0.4.4",
-    "grunt": "0.3.x",
-    "grunt-shell": "*",
+    "grunt": "0.4.x",
+    "grunt-shell": "0.2.2",
     "grunt-contrib-clean": "0.4.1",
     "grunt-contrib-concat": "0.1.3",
-    "grunt-contrib-watch": "*"
+    "grunt-contrib-watch": "0.4.4"
   }
 }
