--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "dist": "./build/dist"
   },
   "engines": {
-    "node": "0.8.x"
+    "node": "*"
   },
   "dependencies": {
     "lodash": "*"
   },
   "devDependencies": {
     "chai": "*",
-    "urequire": "0.4.0",
-    "grunt-urequire": "0.4.4",
+    "urequire": "0.4.1",
+    "grunt-urequire": "0.4.5",
     "grunt": "0.4.x",
     "grunt-shell": "0.2.2",
     "grunt-contrib-clean": "0.4.1",
