--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uberscore",
-  "description": "uBerscore js is (now) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
-  "version": "0.0.11",
+  "description": "uBerscore js is (still) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
+  "version": "0.0.12",
   "homepage": "https://github.com/anodynos/uBerscore",
   "author": {
     "name": "Agelos Pikoulas",
@@ -38,8 +38,8 @@
   },
   "devDependencies": {
     "chai": "*",
-    "urequire": "0.4.1",
-    "grunt-urequire": "0.4.5",
+    "urequire": ">=0.4.2",
+    "grunt-urequire": "0.4.x",
     "grunt": "0.4.x",
     "grunt-shell": "0.2.2",
     "grunt-contrib-clean": "0.4.1",
