--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uberscore",
   "description": "uBerscore js is (still) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "homepage": "https://github.com/anodynos/uBerscore",
   "author": {
     "name": "Agelos Pikoulas",
@@ -38,17 +38,14 @@
   "devDependencies": {
     "chai": "*",
     "mocha": "*",
-    "urequire": "0.6.7",
-    "coco": "*",
-    "iced-coffee-script": "*",
     "coffee-script": "*",
-    "LiveScript": "*",
-    "grunt-urequire": "0.6.x",
     "grunt": "0.4.x",
+    "grunt-urequire": "0.6.x",
     "grunt-contrib-clean": "0.4.x",
     "grunt-contrib-concat": "0.1.x",
     "grunt-shell": "~0.3.x",
     "grunt-contrib-watch": "0.5.x",
-    "grunt-mocha": "*"
+    "grunt-mocha": "*",
+    "urequire": "0.6.8"
   }
 }
