--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uberscore",
   "description": "uBerscore js is (still) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
-  "version": "0.0.15-01",
+  "version": "0.0.16",
   "homepage": "https://github.com/anodynos/uBerscore",
   "author": {
     "name": "Agelos Pikoulas",
@@ -46,7 +46,7 @@
     "grunt-shell": "~0.3.x",
     "grunt-contrib-watch": "0.5.x",
     "grunt-mocha": "*",
-    "urequire": "0.6.8",
+    "urequire": "0.6.10",
     "underscore": "*"
   }
 }
