--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ node_js:
 before_script:
   - npm install -g grunt-cli
   - npm install -g bower
+  - npm install -g mocha
+  - npm install -g mocha-phantomjs
   - bower install
