--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "mocha": "2.4.x",
     "coffee-script": "1.10.x",
     "grunt": "0.4.5",
-    "grunt-urequire": "0.7.2",
+    "grunt-urequire": "^0.7.3",
     "grunt-contrib-watch": "0.6.x",
     "grunt-contrib-clean": "1.0.x",
     "urequire": ">=0.7.0-beta.25",
