--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "uberscore",
   "description": "uBerscore js is (still) an early experiment: a 'higher' level data manipulator for all kinds of js collections (objects+arrays); it offers functionality & shortcuts that underscore doesn't, wouldn't, shouldn't have.",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "homepage": "https://github.com/anodynos/uBerscore",
   "author": {
-    "name": "Agelos Pikoulas",
+    "name": "Angelos Pikoulas",
     "email": "agelos.pikoulas@gmail.com"
   },
   "licenses": [
@@ -30,7 +30,7 @@
     "test": "grunt clean release"
   },
   "engines": {
-    "node": ">=0.10 <=5"
+    "node": ">=0.10 <=10"
   },
   "dependencies": {
     "lodash": "3.x"
